# data-structures-2-mycalc

./: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  HelperLibrary.cpp  HelperLibrary.h  HelperLibrary.h.gch  Makefile  README.md  Token.cpp  Token.h  WhiteSpace.h.gch  file1.txt  myCalc.cpp  output
